--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -2,6 +2,22 @@
 
     <% @tweets.each do |tweet| %>
       <div class="content_post" style="background-image: url(<%= tweet.image %>);">
+
+        <div class="more">
+          <span><%= image_tag 'arrow_top.png' %></span>
+          <ul class="more_list">
+          <% if user_signed_in? && current_user.id == tweet.user_id %>
+
+           <li>
+           <%= link_to '編集', "/tweets/#{tweet.id}/edit", method: :get>
+
+            <li>
+            <%= link_to '削除', "/tweets/#{tweet.id}", method: :delete %>
+            </li>
+          <% end %>
+          </ul>
+        </div>
+
         <%= simple_format(tweet.text) %>
         <span class="name"><%= tweet.name %></span>
       </div>
